<resources>
    <string name="app_name">WhatsAppClone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_new_account">Create a new account</string>
    <string name="login_using">Or </string>
    <string name="phone">Phone</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register">Register</string>
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_name">User name</string>
    <string name="status">Status</string>
    <string name="update">Update</string>
    <string name="create_group">Create Group</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_code">Resend Code</string>
</resources>