<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scrollIndicators="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/login_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/login_background_gradient"
                android:src="@drawable/login_background" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_image"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/log_in_holder"
                android:elevation="5dp"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_email"
                    android:hint="Email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/icon_password"
                    android:hint="Password"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/login_forget_password_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="right"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorPrimary" />


                <Button
                    android:id="@+id/login_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/buttons"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:elevation="5dp" />





                <TextView
                    android:id="@+id/login_using"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_using"
                    android:textColor="@color/colorPrimary" />


                <ImageButton
                    android:id="@+id/phone_login_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_phone"
                    android:background="@drawable/phone_button_background"
                    android:gravity="center"
                    android:text="@string/phone"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    app:elevation="5dp"
                    android:contentDescription="@string/common_signin_button_text" />

                <TextView
                    android:id="@+id/login_need_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/create_new_account"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>